# mcdownload

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml  test.yml
proptest-regressions/: metadata.txt
src/: app.rs  cli.rs  command.rs  commands.rs  common.rs  identifiers.rs  lib.rs  macros.rs  main.rs  metadata.rs  minecraft.rs  net.rs  types.rs
src/cli/: impls.rs  parse.rs
src/command/: info.rs  install.rs  list.rs  uninstall.rs
src/commands/: info.rs  install.rs  list.rs
src/identifiers/: generated.rs
src/metadata/api/models/: minecraft.rs
src/minecraft/: api.rs
src/models/: minecraft.rs
src/models/minecraft/: api.rs
src/types/: meta.rs  minecraft.rs  mod.rs  net.rs  version.rs
src/utils/: macros.rs  mod.rs  net.rs
test_data/: id.list  versions.json
tests/: bin_tests.rs
