[package]
name         = "mcdl"
version      = "0.3.5"
authors      = ["paenis <github+paenis@cark.moe>"]
homepage     = "https://github.com/paenis/mcdownload"
edition      = "2024"
rust-version = "1.89.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive", "wrap_help"] }
console-subscriber = { version = "0.4.1", optional = true }
data-encoding = "2.9.0"
fastrand = "2.3.0"
http-cache-reqwest = "0.16.0"
jiff = { version = "0.2.15", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["parking_lot", "env-filter"] }
winnow = { version = "0.7.13", features = ["simd"] }

# bytes = "1.7.0"
# color-eyre = "0.6.2"
# dialoguer = { version = "0.11.0", default-features = false }
# directories = "5.0.1"
# indicatif = "0.17.7"
# parking_lot = "0.12.1"
# prettytable-rs = { version = "0.10.0", default-features = false }
# shell-escape = "0.1.5"
# toml = { version = "0.8.19", features = ["preserve_order"] }
# tracing-error = "0.2.0"

[dev-dependencies]
proptest = "1.8.0"

[features]
default = []
# only for debugging! makes the binary really big!
console = ["dep:console-subscriber", "tokio/tracing"]

[profile.dev]
opt-level = 1

[profile.release]
debug = "line-tables-only"
lto = "thin" # about 70% smaller with debuginfo
codegen-units = 4
