[package]
name         = "mcdl"
version      = "0.3.5"
authors      = ["paenis <github+paenis@cark.moe>"]
homepage     = "https://github.com/paenis/mcdownload"
edition      = "2024"
rust-version = "1.92.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
data-encoding = "2.11.0"
fastrand = "2.4.1"
jiff = { version = "0.2.24", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["brotli", "deflate", "gzip", "json", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
supports-color = "3.0.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["parking_lot", "env-filter"] }
winnow = { version = "1.0.2", features = ["simd"] }

# bytes = "1.7.0"
# dialoguer = { version = "0.11.0", default-features = false }
# directories = "5.0.1"
# indicatif = "0.17.7"
# parking_lot = "0.12.1"
# prettytable-rs = { version = "0.10.0", default-features = false }
# shell-escape = "0.1.5"
# toml = { version = "0.8.19", features = ["preserve_order"] }

[dev-dependencies]
proptest = "1.11.0"

[features]
default = []
# only for debugging! makes the binary really big!
console = ["dep:console-subscriber", "tokio/tracing"]

[profile.dev]
opt-level = 1

[profile.release]
debug = "line-tables-only"
lto = "thin" # about 70% smaller with debuginfo
codegen-units = 4
